Add Introduction & Foreword

--- a/content/index.mdx
+++ b/content/index.mdx
@@ -1,30 +1,13 @@
 ---
-title: "Landing Page"
+title: "Prefácio"
+metaTitle: "Prefácio"
 ---
 
-Some introduction text. Lists out all the headings from h1 to h6. Easy to customise. Some more text. Additional text.
+<h1> Olá! </h1>
 
-# Heading H1
-Heading 1 text
+Seja muito bem vindo ao **Arch101**, meu repositório de conteúdos sobre arquitetura de Software. 
+Meu objetivo é compartilhar meus conhecimentos e aprendizados e criar um conteúdo de referência, tanto própria quanto para os outros.
 
-## Heading H2
-Heading 2 text
+Até segunda ordem esse conteúdo está em constante modificação. Sinta-se livre para reportar erros e submeter alterações diretamente no [repositório](https://github.com/joaolucasl/arch-101).
 
-### Heading H3
-Heading 3 text
-
-#### Heading H4
-Heading 4 text
-
-##### Heading H5
-Heading 5 text
-
-###### Heading H6
-Heading 6 text
-
-## Lists
-- Item 1
-- Item 2
-- Item 3
-- Item 4
-- Item 5
+Espero que seja útil para você! Até mais! ✌🏻
